--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,13 @@ jobs:
 
       - name: Setup Gradle & Caches
         uses: "./.github/actions/setup-gradle"
+        
+      - name: Build
+        run: |
+          ./gradlew build --refresh-dependencies
 
-      - name: Test Server
-        uses: ValkyrienSkies/Minecraft-Architectury-Testing@v1.9
-        with:
-          serverType: ${{ matrix.serverType }}
+#       - name: Test Server
+#         uses: ValkyrienSkies/Minecraft-Architectury-Testing@v1.9
+#         with:
+#           serverType: ${{ matrix.serverType }}
+
